--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,11 +12,25 @@ p {
 	margin: 1em auto;
 }
 
+#stats-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-left: 30%;
+	margin-right: 30%;
+}
+
 #stats {
 	display: flex;
 	justify-content: space-around;
-	margin-left: 20%;
-	margin-right: 20%;
+	width: 100%;
+}
+
+.time {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 #game {
